Fixed filter text for dark mode

--- a/src/sass/home/_darkMode.scss
+++ b/src/sass/home/_darkMode.scss
@@ -25,7 +25,7 @@
 
       &-right {
         &-filter-button {
-          p {
+          span {
             color: variables.$neutral-100 !important;
           }
         }
